ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
:root {
    --bg: #242628;
    --titleBg:  #2a2e33;
    --buttonBg: #2a2e33;
    --hourHeight: 3rem;
    --calenderStrongLine: #16171a;
    --calenderWeakLine: color(var(--calenderStrongLine) alpha(.3));
    --allDayBg: #1e2123;
}


.CalendarWidget {
    flex-grow: 0;
    display: flex;
    flex-direction: column;
    position: relative;
    border-spacing: 0;
    font-weight: 200;
    border: 1px solid #16171A;
}

.CalendarWidget > header {
    margin-bottom: 1em;
}

.CalendarWidget caption {
    padding: 1em 0;
    text-align: left;
}

.CalendarWidget-date {
    color: #E0E5E5;
    font-size: 1.5em;
    flex: 1;
}

.CalendarWidget-substitution {
    flex: 1;
    display: flex;
    flex-direction: column;
}

/* buttons */

.Calendar-navigation button {
    font-size: .8em;
    height: 2.5em;
    background-color: var(--buttonBg);
    color: #939E9F;
    border: 1px solid #0F1213;
    cursor: pointer;
    outline: none;

    &:hover {
        background-color: color(var(--buttonBg) lightness(25%));
    }
}

.Calendar-navigation button:active {
    background-color: #2089d3;
    color: #fff;
}

.CalendarWidget-todayButton {
    height: 2rem;
    padding: 0 1rem;
    margin-right: .5rem;
    border-radius: 4px;
    border: 0;
    outline: none;
}

.CalendarWidget-todayButton.montage--disabled {
    opacity: .25;
    cursor: not-allowed;
}

/* Calendar Navigation */

.Calendar-navigation {
    flex: 1;
    display: flex;
    align-items: center;
    margin-bottom: 1em;
}

.Calendar-navigation-buttons {
    display: flex;
    margin-right: 1em;
}

.Calendar-navigation-button {
    height: 2rem;
    width:  2rem;
    background: #242628;
    color: #939E9F;
    cursor: pointer;
}

.Calendar-navigation-button svg { width: 1.4em; }

.Calendar-navigation-button:first-child {
    border-top-left-radius:     4px;
    border-bottom-left-radius:  4px;
    border-right: none;
}

.Calendar-navigation-button:first-child svg {
    transform: rotate(180deg);
}

.Calendar-navigation-button:last-child {
    border-top-right-radius:     4px;
    border-bottom-right-radius:  4px;
}

/* Days Header Height */

.CalendarWidget thead td {
    background: #2A2E33;
    color: #E0E5E5;
    font-weight: 200;
    height:      1rem;
    line-height: 1rem;
    font-size: .8em;
    text-align: center;
}

.CalendarWidget-day {
    height: 5.5em;

    @media (min-height: 70em) {
        height: 8em;
    }
}

.CalendarWidget-taskCategories {
    display: flex;
    align-items: center;
}


/* Calendar View */

.CalendarWidget-view {
    flex: 1;
    display: flex;
    flex-direction: column;
}

/*

Header

*/

.CalendarWidget-view-header {
    display: flex;
    flex-shrink: 0;
    /* added to match the CalendarWidget-view main border */
    border: 1px solid transparent;
}

.CalendarWidget-view-days {
    display: flex;
    flex: 1;
    background: var(--titleBg);
}

.CalendarWidget-view-day {
    display: flex;
    flex-direction: column;
    flex: 1;
}

.CalendarWidget-view-day-title {
    flex: 1;
    align-self: center;
    font-size: .8rem;
    padding: .5rem .25rem;
    color: #e0e5e5;
}

/* Recurring Events shown in Day Header */

.CalendarWidget-allDayEvents {
    position: relative;
    padding: .15em .25em;
    padding-bottom: 1em;
    background: var(--allDayBg);

    @nest .CalendarWidget-view-day:not(:last-child) & {
        border-right:   1px solid var(--calenderStrongLine);
    }
}

/*

Main Content

*/

.CalendarWidget-view-main {
    position: relative;
    flex: 1;
    border: 1px solid var(--calenderStrongLine);
    background-color: var(--bg);
    display: flex;

    & .Scrollview-transform {
        flex: none;
    }

    /* magic numbers :( */
    height: 30em;

    @media (min-height: 70em) {
        height: 40em;
    }
}

.CalendarWidget-view-content {
    display: flex;
    position: relative;
}

/* hours */

.CalendarWidget-view-hours {
    flex: 1;
    position: relative;
    background-color: var(--titleBg);

    /* Grid */

    &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background-image: linear-gradient(var(--calenderStrongLine) 1px, transparent 1px);
        background-size: var(--hourHeight) var(--hourHeight);
        background-position: -1px -1px;
    }
}

.CalendarWidget-view-hour {
    text-align: right;
    font-size: .8rem;
    padding: .25rem .5rem;
    position: relative;
    line-height: 1.5em;
    height: var(--hourHeight);
    border-right: 1px solid var(--calenderStrongLine);
}

/* Day Columns */

.CalendarWidget-view-dayColumns {
    flex: 1;
    display: flex;
    position: relative;

    /* Grid */

    &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background-image: linear-gradient(var(--calenderStrongLine) 1px, transparent 1px),
                          linear-gradient(var(--calenderWeakLine) 1px, transparent 1px);
        background-size: var(--hourHeight) var(--hourHeight), var(--hourHeight) var(--hourHeight);
        background-position: -1px -1px, -1px calc(var(--hourHeight) / 2 - 1px);
    }
}

.CalendarWidget-view-dayColumn {
    position: relative;
    flex: 1;
    flex-direction: column;

    &:not(:last-child):before {
        content: '';
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        width: 1px;
        background: var(--calenderStrongLine);
        z-index: 1;
    }
}

/* Axis */

.CalendarWidget-view-column--axis {
    flex: 1;
    max-width: calc(var(--hourHeight));
}

/*

Calendar Events

*/

.CalendarWidget-event {
    width: 100%;
    font-size: 1rem;
    display: none;
    position: absolute;
    align-items: center;
    cursor: pointer;
    transform: translateY(2px);
    border: 1px solid transparent;

    /* $fixme - remove one of these classes */
    &.is-displayed,
    &.is-visible {
        display: block;
    }

    &.event-is-overlayed {
        border-color: var(--bg);
        right: 0;
        width: auto;
    }

    @nest .CalendarWidget-allDayEvents & {
        position: relative;
    }

    @nest .MonthView & {
        position: relative;
        width: auto;
    }
}

.CalendarWidget-event-inner {
    overflow: hidden;
    border-radius: 2px;
    color: #fff;
}

.CalendarWidget-event.type-rsync .CalendarWidget-event-inner                             { background-color: #D95B1B; }
.CalendarWidget-event.type-volume_scrub .CalendarWidget-event-inner                      { background-color: #093A51; }
.CalendarWidget-event.type-replication_replicate_dataset .CalendarWidget-event-inner     { background-color: #008C84; }
.CalendarWidget-event.type-disk_parallel_test .CalendarWidget-event-inner                { background-color: #990F82; }
.CalendarWidget-event.type-update_checkfetch .CalendarWidget-event-inner                 { background-color: #C4A412; }
.CalendarWidget-event.type-volume_snapshot_dataset .CalendarWidget-event-inner           { background-color: #6D2A2A; }
.CalendarWidget-event.type-calendar_task_command .CalendarWidget-event-inner             { background-color: grey; }

.CalendarWidget-event.is-selected .CalendarWidget-event-inner {
    color: #FFF;
    background-color: #2B9CD8;
}

